--- a/contacto.html
+++ b/contacto.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="contact_styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hind+Siliguri:wght@700&family=Josefin+Sans&family=Noto+Sans+HK&family=Source+Code+Pro:wght@500&family=Staatliches&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header class="header">
         <div class="title_name">
-            <h1>LA ORIGINAL</h1>
+            <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
         <div class="nav_container">
             <nav class="nav">
@@ -59,7 +61,7 @@
                     </div>
                     <div>
                         <h5>
-                            La direccion
+                            santa cecilia #6311, hacienda del seminario.
                         </h5>
                     </div>
                 </div>
@@ -77,7 +79,7 @@
                     </div>
                     <div>
                         <h5>
-                            6691234567
+                            6692148332
                         </h5>
                     </div>
                 </div>
@@ -95,7 +97,7 @@
                     </div>
                     <div>
                         <h5>
-                            laorigina@hotmail.com
+                            miguel_neto_hdz@outlook.com
                         </h5>
                     </div>
                 </div>
