--- a/galeria.html
+++ b/galeria.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="galeria_styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&family=Source+Code+Pro:wght@500&family=Staatliches&display=swap" rel="stylesheet">
     <title>Galeria</title>
 </head>
 <body>
     <header class="header">
         <div class="title_name">
-            <h1>LA ORIGINAL</h1>
+            <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
         <div class="nav_container">
             <nav class="nav">
@@ -37,17 +39,17 @@
             </div>
             <div class="img2 images_containers">
                 <a href="#galeria_posadasimg2">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/DoNsjjN.png" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
                 <a href="#galeria_posadasimg3">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/jaoDArw.png" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
                 <a href="#galeria_posadasimg4">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/cNqExWI.png" alt="">
                 </a>
             </div>
             <p>Posadas</p>
@@ -55,22 +57,22 @@
         <div class="galerias galeria2">
             <div class="img1 images_containers">
                 <a href="#galeria_cumpleanosimg1">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/M1t7NSg.png" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
                 <a href="#galeria_cumpleanosimg2">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/IHv4kAM.png" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
                 <a href="#galeria_cumpleanosimg3">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/ic9tGWy.png" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
                 <a href="#galeria_cumpleanosimg4">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/boul2c7.png" alt="">
                 </a>
             </div>
             <p>Cumpleaños</p>
@@ -78,22 +80,22 @@
         <div class="galerias galeria3">
             <div class="img1 images_containers">
                 <a href="#galeria_bodasimg1">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/pb1yu3v.png" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
                 <a href="#galeria_bodasimg2">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/ZFDODvs.png" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
                 <a href="#galeria_bodasimg3">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/eK3xBgW.png" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
                 <a href="#galeria_bodasimg4">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/3UbR9Vv.png" alt="">
                 </a>
             </div>
             <p>Bodas</p>
@@ -101,7 +103,7 @@
         <div class="galerias galeria4">
             <div class="img1 images_containers">
                 <a href="#galeria_reunionesimg1">
-                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/Fa8bysr.png" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
@@ -136,7 +138,7 @@
     <div class="pop_galery" id="galeria_posadasimg2">
         <div class="pop_image">
             <a href="#galeria_posadasimg1">&#60;</a>
-            <a href="#galeria_posadasimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg3"><img src="https://i.imgur.com/DoNsjjN.png" alt=""></a>
             <a href="#galeria_posadasimg3">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -144,7 +146,7 @@
     <div class="pop_galery" id="galeria_posadasimg3">
         <div class="pop_image">
             <a href="#galeria_posadasimg2">&#60;</a>
-            <a href="#galeria_posadasimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg4"><img src="https://i.imgur.com/jaoDArw.png" alt=""></a>
             <a href="#galeria_posadasimg4">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -152,7 +154,7 @@
     <div class="pop_galery" id="galeria_posadasimg4">
         <div class="pop_image">
             <a href="#galeria_posadasimg3">&#60;</a>
-            <a href="#galeria_posadasimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg1"><img src="https://i.imgur.com/cNqExWI.png" alt=""></a>
             <a href="#galeria_posadasimg1">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -163,7 +165,7 @@
     <div class="pop_galery" id="galeria_cumpleanosimg1">
         <div class="pop_image">
             <a href="#galeria_cumpleanosimg4">&#60;</a>
-            <a href="#galeria_cumpleanosimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg2"><img src="https://i.imgur.com/M1t7NSg.png" alt=""></a>
             <a href="#galeria_cumpleanosimg2">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -171,7 +173,7 @@
     <div class="pop_galery" id="galeria_cumpleanosimg2">
         <div class="pop_image">
             <a href="#galeria_cumpleanos">&#60;</a>
-            <a href="#galeria_cumpleanosimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg3"><img src="https://i.imgur.com/IHv4kAM.png" alt=""></a>
             <a href="#galeria_cumpleanosimg3">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -179,7 +181,7 @@
     <div class="pop_galery" id="galeria_cumpleanosimg3">
         <div class="pop_image">
             <a href="#galeria_cumpleanosimg2">&#60;</a>
-            <a href="#galeria_cumpleanosimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg4"><img src="https://i.imgur.com/ic9tGWy.png" alt=""></a>
             <a href="#galeria_cumpleanosimg4">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -187,7 +189,7 @@
     <div class="pop_galery" id="galeria_cumpleanosimg4">
         <div class="pop_image">
             <a href="#galeria_cumpleanosimg3">&#60;</a>
-            <a href="#galeria_cumpleanosimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg1"><img src="https://i.imgur.com/boul2c7.png" alt=""></a>
             <a href="#galeria_cumpleanosimg1">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -198,7 +200,7 @@
     <div class="pop_galery" id="galeria_bodasimg1">
         <div class="pop_image">
             <a href="#galeria_bodasimg4">&#60;</a>
-            <a href="#galeria_bodasimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg2"><img src="https://i.imgur.com/pb1yu3v.png" alt=""></a>
             <a href="#galeria_bodasimg2">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -206,7 +208,7 @@
     <div class="pop_galery" id="galeria_bodasimg2">
         <div class="pop_image">
             <a href="#galeria_bodas">&#60;</a>
-            <a href="#galeria_bodasimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg3"><img src="https://i.imgur.com/ZFDODvs.png" alt=""></a>
             <a href="#galeria_bodasimg3">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -214,7 +216,7 @@
     <div class="pop_galery" id="galeria_bodasimg3">
         <div class="pop_image">
             <a href="#galeria_bodasimg2">&#60;</a>
-            <a href="#galeria_bodasimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg4"><img src="https://i.imgur.com/eK3xBgW.png" alt=""></a>
             <a href="#galeria_bodasimg4">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -222,7 +224,7 @@
     <div class="pop_galery" id="galeria_bodasimg4">
         <div class="pop_image">
             <a href="#galeria_bodasimg3">&#60;</a>
-            <a href="#galeria_bodasimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg1"><img src="https://i.imgur.com/3UbR9Vv.png" alt=""></a>
             <a href="#galeria_bodasimg1">></a>
         </div>
             <a class="cerrar" href="">x</a>
@@ -233,7 +235,7 @@
     <div class="pop_galery" id="galeria_reunionesimg1">
         <div class="pop_image">
             <a href="#galeria_reunionesimg4">&#60;</a>
-            <a href="#galeria_reunionesimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_reunionesimg2"><img src="https://i.imgur.com/Fa8bysr.png" alt=""></a>
             <a href="#galeria_reunionesimg2">></a>
         </div>
             <a class="cerrar" href="">x</a>
