--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     
     <title>Document</title>
@@ -12,7 +13,7 @@
 <body>
     <header class="header">
         <div class="title_name">
-            <h1>LA ORIGINAL</h1>
+            <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
         <div class="nav_container">
             <nav class="nav">
@@ -105,7 +106,7 @@
                     <input type="email" name="email" class="form-control mail-field" required="required" placeholder="Email">
                 </div>
                 <div class="form-group">
-                    <input type="text" id="telefono" required="required" class="form-control" placeholder="Telefono">
+                    <input type="text" id="telefono" required="required" class="form-control phone-field" placeholder="Telefono">
                 </div>
                 <div>
                     <button type="submit" class="bt bt-primary">
@@ -124,7 +125,7 @@
                 <p>6691234567</p>
             </section>
             <section>
-                <a href="mailto:mocn2_13@hotmail.com"><p>laoriginal@hotmail.com</p></a>
+                <a href="mailto:miguel_neto_hdz@outlook.com"><p>laoriginal@hotmail.com</p></a>
             </section>
         </div>
     </div>
