--- a/us.html
+++ b/us.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="us_styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@700&family=Josefin+Sans&family=Noto+Sans+HK&family=Source+Code+Pro:wght@500&family=Staatliches&display=swap" rel="stylesheet">
     <title>Nosotros</title>
 </head>
 <body>
     <header class="header">
         <div class="title_name">
-            <h1>LA ORIGINAL</h1>
+            <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
         <div class="nav_container">
             <nav class="nav">
