v1 del responsive en inicio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <header class="header">
+        <div class="nav_btn_container">
+            <button class="nav_btn">
+                <img src="https://www.flaticon.com/svg/static/icons/svg/545/545705.svg" alt="">
+            </button>
+        </div>
         <div class="title_name">
             <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
