--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <div class="nav_btn_container">
             <button class="nav_btn">
                 <img src="https://www.flaticon.com/svg/static/icons/svg/545/545705.svg" alt="">
+                <nav class="nav_btn_display">
+                    <ol>
+                        <li>epa</li>
+                        <li>epa</li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                </nav>
             </button>
         </div>
         <div class="title_name">
