--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <input type="email" name="email" class="form-control mail-field" required="required" placeholder="Email">
                 </div>
                 <div class="form-group">
-                    <input type="text" id="telefono" required="required" class="form-control phone-field" placeholder="Telefono">
+                    <input type="text" name="telefono" required="required" class="form-control phone-field" placeholder="Telefono">
                 </div>
                 <div>
                     <button type="submit" class="bt bt-primary">
