--- a/us.html
+++ b/us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="hamburgers.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="us_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -11,6 +12,12 @@
 </head>
 <body>
     <header class="header">
+        <input type="checkbox" id="btn-menu">
+        <label for="btn-menu" class="hamburger hamburger--arrowturn">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+        </label>  
         <div class="title_name">
             <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
