--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             </span>
         </label>  
         <div class="title_name">
-            <img src="https://i.imgur.com/4hlloiv.png" alt="">
+            <div>
+                <img src="https://i.imgur.com/4hlloiv.png" alt="">
+            </div>    
         </div>
         <div class="nav_container">
             <nav class="nav navigation">
