--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
             <section><button>Enviar</button></section> -->
         </div>
         <div class="contact2">
-            <section>
+            <div>
                 <img src="https://www.flaticon.com/svg/static/icons/svg/733/733585.svg" alt="whatsapp">
                 <p>6691234567</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <a href="mailto:miguel_neto_hdz@outlook.com"><p>laoriginal@hotmail.com</p></a>
-            </section>
+            </div>
         </div>
     </div>
     <footer class="footer">
