prueba 1 de correccion de contact2 en iphone

--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
         </div>
         <div class="contact2">
             <div>
+                <div>
                 <img src="https://www.flaticon.com/svg/static/icons/svg/733/733585.svg" alt="whatsapp">
-                <p>6691234567</p>
+                </div>
+                <div>
+                    <p>6691234567</p>
+                </div>
             </div>
             <div>
                 <a href="mailto:miguel_neto_hdz@outlook.com"><p>laoriginal@hotmail.com</p></a>
