prueba 2 de correccion de contact2 en iphone

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
             <section><button>Enviar</button></section> -->
         </div>
         <div class="contact2">
-            <div>
-                <div>
+            <div class="contact2_divs">
+                <div class="contact2_img">
                 <img src="https://www.flaticon.com/svg/static/icons/svg/733/733585.svg" alt="whatsapp">
                 </div>
                 <div>
                     <p>6691234567</p>
                 </div>
             </div>
-            <div>
+            <div class="contact2_divs contact2_mail">
                 <a href="mailto:miguel_neto_hdz@outlook.com"><p>laoriginal@hotmail.com</p></a>
             </div>
         </div>
