cambio al contain borrado de contat us

--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
             <div class="text"></div>
     
     </div>
-    <div class="contain">
-        <div class="menu">
+    <div class="packets_container">
+        <div class="packets">
             <section>
                 <h1>Paquetes</h1>
             </section>
+        </div>
+    </div>
+    <div class="contain">
+        <div class="menu menu_100">
             <section>
                 <h2>
                     <li class="title-packets">
@@ -71,6 +75,8 @@
                     <li>Mesero</li>
                 </ul>
             </section>
+        </div>
+        <div class="menu menu_50">
             <section>
                 <h2>
                     <li class="title-packets">
@@ -104,7 +110,7 @@
                 </h4>
             </section>
         </div>
-        <div class="contact">
+        <!-- <div class="contact">
             <h1>Contactanos</h1>
             <form id="contact-form" class="contactF" name="contact-form" method="post" action="mailRequest.php">
                 <div class="form-group">
@@ -121,12 +127,12 @@
                         Contactenme
                     </button>
                 </div>
-            </form>
+            </form> -->
             <!-- <section><input type="text"></section>
             <section><input type="text"></section>
             <section><input type="text"></section>
             <section><button>Enviar</button></section> -->
-        </div>
+        <!-- </div> -->
         <div class="contact2">
             <div class="contact2_divs">
                 <div class="contact2_img">
