--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
-        </label>  
+        </label>
         <div class="title_name">
             <div>
                 <img src="https://i.imgur.com/4hlloiv.png" alt="">
-            </div>    
+            </div>
         </div>
         <div class="nav_container">
             <nav class="nav navigation">
                 <ol>
-                    <li><a href="index.html"><span>incio</span></a></li>
+                    <li><a href="index.html"><span>Incio</span></a></li>
                     <li class="borders"></li>
                     <!-- <li><a href=""><span>Menu</span></a></li>
                     <li class="borders"></li> -->
-                    <li><a href="galeria.html"><span>Galeria</span></a></li>
+                    <li><a href="galeria.html"><span>Galer&iacutea</span></a></li>
                     <li class="borders"></li>
                     <li><a href="us.html"><span>Nosotros</span></a></li>
                     <li class="borders"></li>
@@ -42,7 +42,7 @@
     <div class="image_container">
             <img src="https://i.imgur.com/AZRdpsp.jpg" alt="barbacoa">
             <div class="text"></div>
-    
+
     </div>
     <div class="packets_container">
         <div class="packets">
@@ -110,29 +110,6 @@
                 </h4>
             </section>
         </div>
-        <!-- <div class="contact">
-            <h1>Contactanos</h1>
-            <form id="contact-form" class="contactF" name="contact-form" method="post" action="mailRequest.php">
-                <div class="form-group">
-                    <input type="text" name="nombre" class="form-control name-field" required="required" placeholder="Nombre">
-                </div>
-                <div class="form-group">
-                    <input type="email" name="email" class="form-control mail-field" required="required" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="telefono" required="required" class="form-control phone-field" placeholder="Telefono">
-                </div>
-                <div>
-                    <button type="submit" class="bt bt-primary">
-                        Contactenme
-                    </button>
-                </div>
-            </form> -->
-            <!-- <section><input type="text"></section>
-            <section><input type="text"></section>
-            <section><input type="text"></section>
-            <section><button>Enviar</button></section> -->
-        <!-- </div> -->
         <div class="contact2">
             <div class="contact2_divs">
                 <div class="contact2_img">
