--- a/us.html
+++ b/us.html
@@ -17,7 +17,7 @@
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
-        </label>  
+        </label>
         <div class="title_name">
             <img src="https://i.imgur.com/4hlloiv.png" alt="">
         </div>
@@ -82,5 +82,24 @@
             <p>Somos la mejor cocina</p>
         </div>
     </footer>
+    <script>
+        // Look for .hamburger
+        var hamburger = document.querySelector(".hamburger");
+        // On click
+        hamburger.addEventListener("click", function() {
+          // Toggle class "is-active"
+          hamburger.classList.toggle("is-active");
+          // Do something else, like open/close menu
+        });
+
+        // Look for .hamburger
+        var navigation = document.querySelector(".navigation");
+        // On click
+        navigation.addEventListener("click", function() {
+          // Toggle class "is-active"
+          navigation.classList.toggle("is-active");
+          // Do something else, like open/close menu
+        });
+      </script>
 </body>
 </html>
